# audio-player

./: Cargo.toml  DESIGN.md  README.md  feeds.json  index.html  manifest.webmanifest  storage.js  styles.css  subscriptions.json  sw.js
.cargo/: config.toml
.github/workflows/: deploy.yml  feedsync.yml
src/: main.rs
tools/feedsync/: Cargo.toml
tools/feedsync/src/: main.rs
tools/icons/: generate.py
